--- a/pages/heroIntro/main.wxml
+++ b/pages/heroIntro/main.wxml
@@ -1,23 +1,25 @@
-<view id="hero-intro">
-  <i-tabs style="" color="#f5f5f5" i-class="hero-tabs" current="{{currentHero._id}}" scroll bindchange="handleChangeScroll">
-    <i-tab i-class="hero-tab" wx:for="{{heroList}}" key="{{item._id}}" wx:key="{{item._id}}" title="{{item.name}}">{{item.name}}</i-tab>
-  </i-tabs>
-  <scroll-view scroll-y scroll-top="{{scrollTop}}" class="basic">
-    <i-card title="{{currentHero.name}}" extra="{{currentHero.alis}}" thumb="{{currentHero.avatarSrc}}">
-      <view slot="content">
-        <view class="hero-motto">{{currentHero.motto}}</view>
-        <view class="hero-attr">
-          <view class="attr-item" wx:for="{{attrKeys}}" wx:key="{{index}}">
-            <view class="attr-key">{{item}}：</view>
-            <view class="attr-value">{{currentHero.attr[index]}}</view>
+<ds-layout leftIcon2="other" bind:handle-click2="openSelectVersion" title="{{'人物('+ currentVersion + ')'}}">
+  <view id="hero-intro">
+    <i-tabs style="width:100vw;" color="#f5f5f5" i-class="hero-tabs" current="{{currentHero._id}}" scroll bindchange="handleChangeScroll">
+      <i-tab i-class="hero-tab" wx:for="{{heroList}}" key="{{item._id}}" wx:key="{{item._id}}" title="{{item.name}}">{{item.name}}</i-tab>
+    </i-tabs>
+    <scroll-view scroll-y scroll-top="{{scrollTop}}" class="basic">
+      <i-card title="{{currentHero.name}}" extra="{{currentHero.alis}}" thumb="{{currentHero.avatarSrc}}">
+        <view slot="content">
+          <view class="hero-motto">{{currentHero.motto}}</view>
+          <view class="hero-attr">
+            <view class="attr-item" wx:for="{{attrKeys}}" wx:key="{{index}}">
+              <view class="attr-key">{{item}}：</view>
+              <view class="attr-value">{{currentHero.attr[index]}}</view>
+            </view>
           </view>
         </view>
-      </view>
-      <view slot="footer">
-        <markdown content="{{currentHero.ability}}"></markdown>
-      </view>
-    </i-card>
-    <ad unit-id="adunit-6ef8df293fa6394f"></ad>
-  </scroll-view>
-  <selectVersion  bind:handle-select="selectVersion" id="select-version"></selectVersion>
-</view>
+        <view slot="footer">
+          <markdown content="{{currentHero.ability}}"></markdown>
+        </view>
+      </i-card>
+      <ad unit-id="adunit-6ef8df293fa6394f"></ad>
+    </scroll-view>
+    <selectVersion  bind:handle-select="selectVersion" id="select-version"></selectVersion>
+  </view>
+</ds-layout>
