--- a/pages/scienceDetail/main.wxss
+++ b/pages/scienceDetail/main.wxss
@@ -3,7 +3,8 @@ page {
 }
 .science-technology-detail {
   position: relative;
-  height: 100%
+  height: 100%;
+  width: 100vw;
 }
 
 .science-technology-detail .view {
