--- a/pages/animInfoDetail/main.wxss
+++ b/pages/animInfoDetail/main.wxss
@@ -6,10 +6,10 @@ page {
   height: 100%
 }
 
-.anim-info-detail .view {
-  position: absolute;
+.view {
+  /* position: absolute;
   top: 0;
-  height: 100%;
+  height: 100%; */
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
