--- a/pages/findFriend/main.wxss
+++ b/pages/findFriend/main.wxss
@@ -27,7 +27,7 @@ page {
 
 .find-friend .friends {
   position: relative;
-  margin-top:40px;
+  margin-top:42px;
   padding: 12px;
   box-sizing: border-box;
 }
@@ -149,11 +149,17 @@ page {
 .sort-list {
   width: 80% !important;
 }
-.type-tabs {
+.type-tabs-container {
   position: fixed !important;
-  top:0;
+  /* top:0; */
   z-index:12;
   flex-shrink: 0;
+}
+.type-tabs {
+  /* position: fixed !important;
+  top:0;
+  z-index:12;
+  flex-shrink: 0; */
   background-color: #37474f !important;
 }
 .type-tab {
