--- a/pages/gameMechanismDetail/main.wxss
+++ b/pages/gameMechanismDetail/main.wxss
@@ -2,6 +2,7 @@ page {
   height: 100%;
 }
 .game-mechanism-detail {
+  width: 100vw;
   height: 100%;
   background-color: #f5f5f5;
   padding: 12px;
