--- a/pages/natureInfoDetail/main.wxml
+++ b/pages/natureInfoDetail/main.wxml
@@ -1,33 +1,35 @@
-<view class="nature-intro-detail">
-  <scroll-view scroll-y="{{true}}" class="view">
-    <common-good wx:if="{{item}}" good="{{item}}" hasFeedback="{{true}}">
-      <view class="attrs">
-        <view class="attr-contanier" wx:if="{{item.attr[0] && item.attr[0] !== '0'}}"><view class="aggressivity">攻击力</view>
-          <view class="attr-value">{{item.attr[0]}}</view>
-        </view>
-        <view class="attr-contanier" wx:if="{{item.attr[1] && item.attr[1] !== '0'}}"><view class="durable">耐久</view>
-          <view class="attr-value" wx:if="{{item.attr[1] == 10001}}">无限</view>
-          <view class="attr-value" wx:else>{{item.attr[1]}}</view>
-        </view>
-      </view>
-    </common-good>
-    <view class="detail-container">
-      <view class="detail">
-        <view class="origin-tip" wx:if="{{origins.length > 0}}">来源</view>
-        <view class="materials" wx:if="{{origins.length > 0}}">
-          <view class="material" wx:for-item="origin" wx:for="{{origins}}" wx:key="index">
-            <image class="material-img" data-origin="{{item.origin[index]}}" bindtap="toImgDetail" src="{{origin}}" alt="" mode="aspectFit" />
+<ds-layout title="自然详情">
+  <view class="nature-intro-detail">
+    <scroll-view scroll-y="{{true}}" class="view">
+      <common-good wx:if="{{item}}" good="{{item}}" hasFeedback="{{true}}">
+        <view class="attrs">
+          <view class="attr-contanier" wx:if="{{item.attr[0] && item.attr[0] !== '0'}}"><view class="aggressivity">攻击力</view>
+            <view class="attr-value">{{item.attr[0]}}</view>
+          </view>
+          <view class="attr-contanier" wx:if="{{item.attr[1] && item.attr[1] !== '0'}}"><view class="durable">耐久</view>
+            <view class="attr-value" wx:if="{{item.attr[1] == 10001}}">无限</view>
+            <view class="attr-value" wx:else>{{item.attr[1]}}</view>
           </view>
         </view>
-        <view class="science-tip" wx:if="{{createSciences.length > 0}}">可制作科技</view>
-        <view class="materials" wx:if="{{createSciences.length > 0}}">
-          <view class="material" wx:for-item="science" wx:for="{{createSciences}}" wx:key="index">
-            <image class="material-img" data-item="{{item.createScience[index]}}" bindtap="toImgDetail" src="{{science}}" alt="" mode="aspectFit" />
+      </common-good>
+      <view class="detail-container">
+        <view class="detail">
+          <view class="origin-tip" wx:if="{{origins.length > 0}}">来源</view>
+          <view class="materials" wx:if="{{origins.length > 0}}">
+            <view class="material" wx:for-item="origin" wx:for="{{origins}}" wx:key="index">
+              <image class="material-img" data-origin="{{item.origin[index]}}" bindtap="toImgDetail" src="{{origin}}" alt="" mode="aspectFit" />
+            </view>
           </view>
+          <view class="science-tip" wx:if="{{createSciences.length > 0}}">可制作科技</view>
+          <view class="materials" wx:if="{{createSciences.length > 0}}">
+            <view class="material" wx:for-item="science" wx:for="{{createSciences}}" wx:key="index">
+              <image class="material-img" data-item="{{item.createScience[index]}}" bindtap="toImgDetail" src="{{science}}" alt="" mode="aspectFit" />
+            </view>
+          </view>
+          <common-detail console="{{item.console}}" desc="{{item.desc}}"></common-detail>
         </view>
-        <common-detail console="{{item.console}}" desc="{{item.desc}}"></common-detail>
       </view>
-    </view>
-    <!-- <ad unit-id="adunit-e88e140d1a0f8613"></ad> -->
-  </scroll-view>
-</view>
+      <!-- <ad unit-id="adunit-e88e140d1a0f8613"></ad> -->
+    </scroll-view>
+  </view>
+</ds-layout>
