--- a/pages/science/main.wxml
+++ b/pages/science/main.wxml
@@ -1,19 +1,21 @@
-<view class="science-technology">
-  <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="tabs">
-    <view bindtap="selectTab" class="tab {{currentTabType === item.type ? 'tab-selected' : ''}}" data-index="{{index}}" data-type="{{item.type}}" wx:for="{{currentMoreTabs}}" wx:key="{{item.type}}">{{item.label}}</view>
-  </scroll-view>
-  <scroll-view scroll-top="{{scrollTop}}" class="view" scroll-y>
-    <common-good wx:if="{{currentGoods.length > 0}}" bind:click="toDetail" wx:for="{{currentGoods}}" good="{{item}}" wx:key="{{item._id}}" type="science">
-      <view class="attrs">
-        <view class="attr-contanier" wx:if="{{item.attr[0]}}"><view class="aggressivity">攻击力</view>
-          <view class="attr-value">{{item.attr[0]}}</view>
+<ds-layout title="{{'科技列表('+ version + ')'}}">
+  <view class="science-technology">
+    <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100vw;" class="tabs">
+      <view bindtap="selectTab" class="tab {{currentTabType === item.type ? 'tab-selected' : ''}}" data-index="{{index}}" data-type="{{item.type}}" wx:for="{{currentMoreTabs}}" wx:key="{{item.type}}">{{item.label}}</view>
+    </scroll-view>
+    <scroll-view scroll-top="{{scrollTop}}" class="view" scroll-y>
+      <common-good wx:if="{{currentGoods.length > 0}}" bind:click="toDetail" wx:for="{{currentGoods}}" good="{{item}}" wx:key="{{item._id}}" type="science">
+        <view class="attrs">
+          <view class="attr-contanier" wx:if="{{item.attr[0]}}"><view class="aggressivity">攻击力</view>
+            <view class="attr-value">{{item.attr[0]}}</view>
+          </view>
+          <view class="attr-contanier" wx:if="{{item.attr[1]}}"><view class="durable">耐久</view>
+            <view class="attr-value" wx:if="{{item.attr[1] == 10001}}">无限</view>
+            <view class="attr-value" wx:else>{{item.attr[1]}}</view>
+          </view>
         </view>
-        <view class="attr-contanier" wx:if="{{item.attr[1]}}"><view class="durable">耐久</view>
-          <view class="attr-value" wx:if="{{item.attr[1] == 10001}}">无限</view>
-          <view class="attr-value" wx:else>{{item.attr[1]}}</view>
-        </view>
-      </view>
-    </common-good>
-    <view wx:if="{{currentGoods.length === 0}}" class="no-data">暂无数据～～～</view>
-  </scroll-view>
-</view>
+      </common-good>
+      <view wx:if="{{currentGoods.length === 0}}" class="no-data">暂无数据～～～</view>
+    </scroll-view>
+  </view>
+</ds-layout>
