--- a/pages/search/main.wxml
+++ b/pages/search/main.wxml
@@ -1,9 +1,11 @@
-<view class="search">
-  <searchInput bind:search="getSearchResult"></searchInput>
-  <view class="tip">Tips: 当前版本为{{version}}</view>
-  <scroll-view scroll-y="{{true}}" class="view">
-    <common-good wx:if="{{results.length > 0}}" bind:click="toDetail" wx:for="{{results}}" good="{{item}}" wx:key="{{item._id}}"></common-good>
-  </scroll-view>
-  <view class="loading" wx:if="{{loading}}">加载中...</view>
-  <view class="no-data" wx:if="{{results.length === 0 && loaded}}">没有找到您要搜索的内容</view>
-</view>
+<ds-layout title="{{'搜索('+ version + ')'}}">
+  <view class="search" style='width: 100vw;'>
+    <searchInput bind:search="getSearchResult"></searchInput>
+    <view class="tip">Tips: 当前版本为{{version}}</view>
+    <scroll-view scroll-y="{{true}}" class="view">
+      <common-good wx:if="{{results.length > 0}}" bind:click="toDetail" wx:for="{{results}}" good="{{item}}" wx:key="{{item._id}}"></common-good>
+    </scroll-view>
+    <view class="loading" wx:if="{{loading}}">加载中...</view>
+    <view class="no-data" wx:if="{{results.length === 0 && loaded}}">没有找到您要搜索的内容</view>
+  </view>
+</ds-layout>
