--- a/pages/science/main.wxml
+++ b/pages/science/main.wxml
@@ -1,7 +1,8 @@
 <view class="science-technology">
-  <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="tabs">
+  <ds-tabs bind:selectTab="selectTab" tabs="{{currentMoreTabs}}"></ds-tabs>
+  <!-- <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="tabs">
     <view bindtap="selectTab" class="tab {{currentTabType === item.type ? 'tab-selected' : ''}}" data-index="{{index}}" data-type="{{item.type}}" wx:for="{{currentMoreTabs}}" wx:key="{{item.type}}">{{item.label}}</view>
-  </scroll-view>
+  </scroll-view> -->
   <scroll-view scroll-top="{{scrollTop}}" class="view" scroll-y>
     <common-good wx:if="{{currentGoods.length > 0}}" bind:click="toDetail" wx:for="{{currentGoods}}" good="{{item}}" wx:key="{{item._id}}" type="science">
       <view class="attrs">
