--- a/components/commonGood/commonGood.wxss
+++ b/components/commonGood/commonGood.wxss
@@ -95,3 +95,15 @@
   display: inline-block;
   padding-right: 14px
 }
+
+.common-good .name-tag {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding-right:48px;
+}
+
+.common-good .tag {
+  font-size: 12px;
+  color: #999;
+}
