--- a/pages/heroIntro/main.wxml
+++ b/pages/heroIntro/main.wxml
@@ -3,7 +3,7 @@
     <i-tab i-class="hero-tab" wx:for="{{heroList}}" key="{{item._id}}" wx:key="{{item._id}}" title="{{item.name}}">{{item.name}}</i-tab>
   </i-tabs>
   <scroll-view scroll-y scroll-top="{{scrollTop}}" class="basic">
-    <i-card title="{{currentHero.name}}" extra="{{currentHero.alis}}" thumb="{{currentHero.avatarSrc}}">
+    <i-card wx:if="{{currentHero.avatarSrc}}" title="{{currentHero.name}}" extra="{{currentHero.alis}}" thumb="{{imgDomain+'/'+currentHero.avatarSrc}}">
       <view slot="content">
         <view class="hero-motto">{{currentHero.motto}}</view>
         <view class="hero-attr">
@@ -14,11 +14,9 @@
         </view>
       </view>
       <view slot="footer">
-        <!-- <markdown content="{{currentHero.ability}}"></markdown> -->
-        <wemark md="{{currentHero.ability}}" link highlight type="wemark"></wemark>
+        <wemark md="{{currentHero.introduce}}" link highlight type="wemark"></wemark>
       </view>
     </i-card>
-    <!-- <ad unit-id="adunit-6ef8df293fa6394f"></ad> -->
   </scroll-view>
   <selectVersion  bind:handle-select="selectVersion" id="select-version"></selectVersion>
 </view>
