--- a/pages/science/main.wxml
+++ b/pages/science/main.wxml
@@ -1,17 +1,16 @@
 <view class="science-technology">
-  <ds-tabs bind:selectTab="selectTab" tabs="{{currentMoreTabs}}"></ds-tabs>
+  <ds-tabs bind:selectTab="selectTab" currentTab="{{currentTab}}" tabs="{{tabs}}"></ds-tabs>
   <!-- <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="tabs">
     <view bindtap="selectTab" class="tab {{currentTabType === item.type ? 'tab-selected' : ''}}" data-index="{{index}}" data-type="{{item.type}}" wx:for="{{currentMoreTabs}}" wx:key="{{item.type}}">{{item.label}}</view>
   </scroll-view> -->
   <scroll-view scroll-top="{{scrollTop}}" class="view" scroll-y>
     <common-good wx:if="{{currentGoods.length > 0}}" bind:click="toDetail" wx:for="{{currentGoods}}" good="{{item}}" wx:key="{{item._id}}" type="science">
       <view class="attrs">
-        <view class="attr-contanier" wx:if="{{item.attr[0]}}"><view class="aggressivity">攻击力</view>
-          <view class="attr-value">{{item.attr[0]}}</view>
+        <view class="attr-contanier" wx:if="{{item.damage}}"><view class="aggressivity">攻击力</view>
+          <view class="attr-value">{{item.damage}}</view>
         </view>
-        <view class="attr-contanier" wx:if="{{item.attr[1]}}"><view class="durable">耐久</view>
-          <view class="attr-value" wx:if="{{item.attr[1] == 10001}}">无限</view>
-          <view class="attr-value" wx:else>{{item.attr[1]}}</view>
+        <view class="attr-contanier" wx:if="{{item.durable}}"><view class="durable">耐久</view>
+          <view class="attr-value">{{item.durable}}</view>
         </view>
       </view>
     </common-good>
