--- a/pages/scienceDetail/main.wxml
+++ b/pages/scienceDetail/main.wxml
@@ -2,28 +2,29 @@
   <scroll-view scroll-y="{{true}}" class="view">
     <common-good good="{{item}}" hasFeedback="{{true}}">
       <view class="attrs">
-        <view class="attr-contanier" wx:if="{{item.attr[0]}}"><view class="aggressivity">攻击力</view>
-          <view class="attr-value">{{item.attr[0]}}</view>
+        <view class="attr-contanier" wx:if="{{item.damage}}"><view class="aggressivity">攻击力</view>
+          <view class="attr-value">{{item.damage}}</view>
         </view>
-        <view class="attr-contanier" wx:if="{{item.attr[1]}}"><view class="durable">耐久</view>
-          <view class="attr-value" wx:if="{{item.attr[1] == 10001}}">无限</view>
-          <view class="attr-value" wx:else>{{item.attr[1]}}</view>
+        <view class="attr-contanier" wx:if="{{item.durable}}"><view class="durable">耐久</view>
+          <view class="attr-value">{{item.durable}}</view>
         </view>
       </view>
     </common-good>
     <view class="detail-container">
       <view class="detail">
         <view class="science">
-          <view class="no-science" wx:if="{{item.technology === 0}}">不需要科技</view>
-          <image class="science-img" wx:else src="{{sciencesImgs[item.technology]}}" alt="test" mode="widthFix" />
+          <view class="no-science" wx:if="{{!item.technology || item.technology.length === 0}}">不需要科技</view>
+          <view wx:else style="display: flex;justify-content: flex-end;">
+            <image wx:if="{{technologyImg.item && technologyImg.item.src}}" wx:key="{{index}}" wx:for-item="technologyImg" wx:for="{{item.technology}}" class="science-img" src="{{imgDomain+technologyImg.item.src}}" alt="test" mode="widthFix" />
+          </view>
         </view>
         <view class="materials">
           <view class="material" wx:for="{{item.composition}}" wx:key="index">
-            <image data-src="{{item.src}}" bindtap="toImgDetail" class="material-img" src="{{item.src}}" alt="" mode="aspectFit" />
+            <image wx:if="{{item.item && item.item.src}}" data-src="{{item.src}}" bindtap="toImgDetail" class="material-img" src="{{imgDomain+item.item.src}}" alt="" mode="aspectFit" />
             <view>x {{item.num}}</view>
           </view>
         </view>
-        <common-detail desc="{{item.desc}}" console="{{item.console}}">
+        <common-detail introduce="{{item.introduce}}" console="{{item.console}}">
           <view class="console" wx:if="{{item.attr[4] && item.attr[4] !== '0'}}">
             <view class="key">防潮</view>
             <view class="value">{{item.attr[4]}}</view>
