--- a/pages/recipe/main.wxml
+++ b/pages/recipe/main.wxml
@@ -1,14 +1,11 @@
 <view class="recipe">
-  <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="tabs">
-    <view bindtap="selectTab" class="tab {{currentTabType === item.type ? 'tab-selected' : ''}}" data-index="{{index}}" data-type="{{item.type}}" wx:for="{{tabs}}" wx:key="{{item.type}}">{{item.label}}</view>
-  </scroll-view>
+  <ds-tabs bind:selectTab="selectTab" currentTab="{{currentTab}}" tabs="{{tabs}}"></ds-tabs>
   <scroll-view scroll-top="{{scrollTop}}" class="view" scroll-y>
     <common-good wx:if="{{currentItems.length > 0}}" bind:click="toDetail" wx:for="{{currentItems}}" good="{{item}}" wx:key="{{item._id}}">
       <view class="food-attrs">
-        <view class="food-attr"  wx:for-item="foodAttrImg" wx:for="{{foodAttrImgs}}" wx:key="{{index}}">
-          <image class="food-attr-img" src="{{foodAttrImg}}" alt="" mode="aspectFit" />
-          <view class="attr-content" wx:if="{{item.attr[index] === 10001}}">无限</view>
-          <view class="attr-content" wx:else>{{item.attr[index]}}</view>
+        <view class="food-attr"  wx:for-item="attrData" wx:for="{{foodAttr}}" wx:key="{{index}}">
+          <image wx:if="{{item[attrData.attr]}}" class="food-attr-img" src="{{attrData.url}}" alt="" mode="aspectFit" />
+          <view wx:if="{{item[attrData.attr]}}" class="attr-content">{{item[attrData.attr]}}</view>
         </view>
       </view>
     </common-good>
