--- a/pages/recipeDetail/main.wxml
+++ b/pages/recipeDetail/main.wxml
@@ -2,10 +2,9 @@
   <scroll-view scroll-y="{{true}}" class="view">
     <common-good good="{{item}}" hasFeedback="{{true}}">
       <view class="food-attrs">
-        <view class="food-attr"  wx:for-item="foodAttrImg" wx:for="{{foodAttrImgs}}" wx:key="{{index}}">
-          <image class="food-attr-img" src="{{foodAttrImg}}" alt="" mode="aspectFit" />
-          <view class="attr-content" wx:if="{{item.attr[index] === 10001}}">无限</view>
-          <view class="attr-content" wx:else>{{item.attr[index]}}</view>
+        <view class="food-attr"  wx:for-item="attrData" wx:for="{{foodAttr}}" wx:key="{{index}}">
+          <image wx:if="{{item[attrData.attr]}}" class="food-attr-img" src="{{attrData.url}}" alt="" mode="aspectFit" />
+          <view wx:if="{{item[attrData.attr]}}" class="attr-content">{{item[attrData.attr]}}</view>
         </view>
       </view>
     </common-good>
@@ -68,7 +67,7 @@
           <view class="value" wx:if="{{!(item.temperature[0] < 0)}}">持续升温{{item.temperature[1]}}s</view>
           <view class="value" wx:if="{{item.temperature[0] < 0}}">持续降温{{item.temperature[1]}}s</view>
         </view>
-        <common-detail desc="{{item.desc}}" console="{{item.console}}"></common-detail>
+        <common-detail introduce="{{item.introduce}}" console="{{item.console}}"></common-detail>
       </view>
     </view>
     <!-- <ad unit-id="adunit-e7a57fa768a06808"></ad> -->
