--- a/pages/animInfo/main.wxml
+++ b/pages/animInfo/main.wxml
@@ -1,12 +1,5 @@
 <view class="anim-info">
-  <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="tabs">
-    <view
-      class="tab {{currentTabType === item.type ? 'tab-selected' : '' }}"
-      data-type="{{item.type}}"
-      data-index="{{index}}"
-      bindtap="selectTab"
-      wx:for="{{currentTabs}}" wx:key="{{item.type}}">{{item.label}}</view>
-  </scroll-view>
+  <ds-tabs bind:selectTab="selectTab" currentTab="{{currentTab}}" tabs="{{tabs}}"></ds-tabs>
   <scroll-view scroll-top="{{scrollTop}}" class="view" scroll-y>
     <common-good wx:for-item="good" wx:if="{{currentGoods.length > 0}}" bind:click="toDetail" wx:for="{{currentGoods}}" good="{{good}}" wx:key="{{good._id}}">
       <view class="animal-attrs">
