--- a/pages/geography/main.wxml
+++ b/pages/geography/main.wxml
@@ -1,7 +1,5 @@
 <view id="geography">
-  <i-tabs style="" color="#f5f5f5" i-class="tabs" current="{{currentTabType}}" scroll bindchange="handleChangeScroll">
-    <i-tab i-class="tab" wx:for="{{tabs}}" key="{{item.type}}" wx:key="{{item.type}}" title="{{item.label}}">{{item.label}}</i-tab>
-  </i-tabs>
+  <ds-tabs bind:selectTab="handleChangeScroll" currentTab="{{currentTab}}" tabs="{{tabs}}"></ds-tabs>
   <scroll-view bindscrolltolower="loadMore" scroll-y scroll-top="{{scrollTop}}" class="basic">
     <view class="items">
       <view class="item" data-id="{{item._id}}" bindtap="toDetail" wx:for="{{currentItems}}" wx:key="{{index}}">
@@ -9,7 +7,7 @@
           <view class="name">{{item.name}}</view>
         </view>
         <view class="img-container">
-          <image class="item-img" src="{{item.src + '?x-oss-process=style/width-180'}}" mode="aspectFill" lazy-load="{{false}}"/>
+          <image class="item-img" src="{{imgDomain + item.src + '?x-oss-process=style/width-180'}}" mode="aspectFill" lazy-load="{{false}}"/>
         </view>
       </view>
       <view class="bottom-tip" wx:if="{{loaded && !items.length && currentItems.length}}">没有更多数据</view>
