--- a/pages/natureInfo/main.wxml
+++ b/pages/natureInfo/main.wxml
@@ -1,7 +1,5 @@
 <view class="nature-info">
-  <scroll-view scroll-with-animation="{{true}}" scroll-left="{{scrollLeft}}" scroll-x style="width: 100%;" class="tabs">
-    <view class="tab {{currentTabType === item.type ? 'tab-selected' : ''}}" data-index="{{index}}" data-type="{{item.type}}" bindtap="selectTab" wx:for="{{tabs}}" wx:key="{{item.type}}">{{item.label}}</view>
-  </scroll-view>
+  <ds-tabs bind:selectTab="selectTab" currentTab="{{currentTab}}" tabs="{{tabs}}"></ds-tabs>
   <scroll-view class="view" scroll-y scroll-top="{{scrollTop}}">
     <common-good wx:if="{{currentGoods.length > 0}}" bind:click="toDetail" wx:for="{{currentGoods}}" good="{{item}}" wx:key="item._id">
       <view class="attrs">
